package main;

public interface DuplicadorDePuntaje {
    public int modificarPuntaje(int unPuntaje);
}
